# MCP-Langchain-Adapter

./: .env.sample  .gitignore  README.md  Response-math-add.md  Response-math-multiply.md  main.py  pyproject.toml  requirements.txt
mcp-client/: client-langchain-multi_mcp.py  client-stdio.py
mcp-client/test-single-mcp/: client-single-server.py
mcp-server/: math_server_stdio.py  weather_server_sse.py
